# resynth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: OPERATOR-PROTOCOL.md  SOURCE-RESOLUTION.md
examples/demo/: engineering-field-notes.md  incident-retrospective.md  standards-review.md
projects/demo/: BRIEF.md  merge-rules.yaml
projects/demo/claims/: EXTRACTION-INSTRUCTIONS.md  S01-claims.jsonl  S02-claims.jsonl  S03-claims.jsonl
projects/demo/gates/: 01-intake.yaml  02-extract.yaml  03-reconcile.yaml  04-synthesis.yaml  05-audit.yaml
projects/demo/index/: RECONCILIATION-INSTRUCTIONS.md  candidates.jsonl  claims-index.md  reconciliation.jsonl
projects/demo/output/: AUDIT-REPORT.md  MASTER.json  MASTER.md  SEAL.yaml
scripts/: run_demo.py
src/resynth/: __init__.py  audit.py  cli.py  config.py  control.py  demo_operator.py  doctor.py  errors.py  export.py  extract.py  fsutil.py  gates.py  intake.py  migrate.py  operator_ai.py  project.py  reconcile.py  runlog.py  synthesise.py  updater.py  wizard.py
src/resynth/resolve/: net.py  (+4 more)
templates/: audit-report.md.j2  brief.md.j2  extraction-instructions.md.j2  master.md.j2  reconciliation-instructions.md.j2  research-prompts.md.j2
tests/: conftest.py  helpers.py  test_audit.py  test_control.py  test_e2e.py  test_extract.py  test_idempotency.py  test_intake.py  test_migrate.py  test_operator.py  test_reconcile.py  test_resolve.py  test_synthesis.py  test_updater.py  test_wizard.py
(+13 files in other folders)
